--- a/src/App.css
+++ b/src/App.css
@@ -16,25 +16,27 @@ body{
 .wrapper{
   background-color: white;
   min-height: 100vh;
+  overflow: hidden;
 }
 .container{
   width: 50%;
   margin: 0 auto;
-  padding:2rem 0;
-  display: flex;
-  gap: 3rem;
-  align-items: center;
+  margin-top: 8rem;
+  /* display: flex; */
+  /* gap: 3rem; */
+  /* align-items: center; */
+  position: relative;
+
 }
 
 .person-details{
   margin-top: 5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+ text-align: center;
+ 
+  
 }
 .image{
-height: 200px;
+
 object-fit: center;
 border-radius: 55%;
 box-shadow: 0px 0px 1px 3px rgba(160, 81, 206, 0.896);
@@ -61,11 +63,25 @@ box-shadow: 0px 0px 1px 3px rgba(160, 81, 206, 0.896);
 .icons{
   color:var(--primary-color);
   background-color: gray;
-  padding: 0.4rem 0.5rem;
+  
+  padding: 0 0.5rem;
+  padding-top: 0.5rem;
   font-size: var(--font1);
   border-radius: 5px;
   font-weight: 700;
   transition: all 0.15s linear;
+  width: 50px;
+  z-index: 1;
+}
+.iconPrev{
+ position: absolute;
+ left: 0;
+ top:150px ;
+}
+.iconNext{
+position: absolute;
+ top:150px ;
+ right: 0;
 }
 .icons:hover{
   cursor: pointer;
@@ -79,6 +95,10 @@ color: blueviolet;
  
   font-size: var(--font1);
   font-weight: 700;
+}
+
+.transition{
+    transition: all 0.15s linear;
 }
 
 @media (max-width:676px){
