--- a/src/App.css
+++ b/src/App.css
@@ -16,27 +16,42 @@ body{
 .wrapper{
   background-color: white;
   min-height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .container{
-  width: 50%;
+  width: 80%;
   margin: 0 auto;
   margin-top: 8rem;
-  /* display: flex; */
-  /* gap: 3rem; */
-  /* align-items: center; */
+  
   position: relative;
+  max-width: 800px;
+  height: 450px;
+  /* overflow: hidden; */
 
+}
+.people{
+ 
+    /*justify-content: center;
+   gap: 3rem; 
+   align-items: center;  */
+   
 }
 
 .person-details{
+ position: absolute;
   margin-top: 5rem;
  text-align: center;
+ top :0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+transition: all 0.2s linear;
  
   
 }
 .image{
-
+width: 150px;
+height: 150px;
 object-fit: center;
 border-radius: 55%;
 box-shadow: 0px 0px 1px 3px rgba(160, 81, 206, 0.896);
@@ -71,15 +86,16 @@ box-shadow: 0px 0px 1px 3px rgba(160, 81, 206, 0.896);
   font-weight: 700;
   transition: all 0.15s linear;
   width: 50px;
+  position: absolute;
   z-index: 1;
 }
 .iconPrev{
- position: absolute;
+
  left: 0;
  top:150px ;
 }
 .iconNext{
-position: absolute;
+
  top:150px ;
  right: 0;
 }
